tests/sksl/errors/ForLoopNEQOverflow.glsl
### Compilation failed:

error: 3: loop must guarantee termination in fewer iterations
    for (int i = 2000000000; i != -2000000000; i += 1000000000) {
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
1 error
